Updated most of the translation en.yml content. See Issue #9

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'sm-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'sm1'%></td><td class="checker"><input type="checkbox" id="sm1-check" /><label class="checker" for="sm1-check">Yes</label></td><td rowspan='10' class="rating" id="sm-rating">0</td></tr>
@@ -35,7 +35,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'pc-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'pc1'%></td><td class="checker"><input type="checkbox" id="pc1-check" /><label class="checker" for="pc1-check">Yes</label></td><td rowspan='8' class="rating" id="pc-rating">0</td></tr>
@@ -51,7 +51,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'eg-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'eg1'%></td><td class="checker"><input type="checkbox" id="eg1-check" /><label class="checker" for="eg1-check">Yes</label></td><td rowspan='8' class="rating" id="eg-rating">0</td></tr>
@@ -70,7 +70,7 @@
 	<div class="tab-pane fade in" id="construction">
 		<table class="table table-condensed table-bordered"><caption><%=t 'ta-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'ta1'%></td><td class="checker"><input type="checkbox" id="ta1-check" /><label class="checker" for="ta1-check">Yes</label></td><td rowspan='9' class="rating" id="ta-rating">0</td></tr>
@@ -87,7 +87,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'sr-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'sr1'%></td><td class="checker"><input type="checkbox" id="sr1-check" /><label class="checker" for="sr1-check">Yes</label></td><td rowspan='8' class="rating" id="sr-rating">0</td></tr>
@@ -103,7 +103,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'sa-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'sa1'%></td><td class="checker"><input type="checkbox" id="sa1-check" /><label class="checker" for="sa1-check">Yes</label></td><td rowspan='8' class="rating" id="sa-rating">0</td></tr>
@@ -122,7 +122,7 @@
 	<div class="tab-pane fade in" id="verification">
 		<table class="table table-condensed table-bordered"><caption><%=t 'dr-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'dr1'%></td><td class="checker"><input type="checkbox" id="dr1-check" /><label class="checker" for="dr1-check">Yes</label></td><td rowspan='8' class="rating" id="dr-rating">0</td></tr>
@@ -138,7 +138,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'cr-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'cr1'%></td><td class="checker"><input type="checkbox" id="cr1-check" /><label class="checker" for="cr1-check">Yes</label></td><td rowspan='8' class="rating" id="cr-rating">0</td></tr>
@@ -154,7 +154,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'st-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'st1'%></td><td class="checker"><input type="checkbox" id="st1-check" /><label class="checker" for="st1-check">Yes</label></td><td rowspan='9' class="rating" id="st-rating">0</td></tr>
@@ -175,7 +175,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'vm-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'vm1'%></td><td class="checker"><input type="checkbox" id="vm1-check" /><label class="checker" for="vm1-check">Yes</label></td><td rowspan='9' class="rating" id="vm-rating">0</td></tr>
@@ -192,7 +192,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'eh-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'eh1'%></td><td class="checker"><input type="checkbox" id="eh1-check" /><label class="checker" for="eh1-check">Yes</label></td><td rowspan='8' class="rating" id="eh-rating">0</td></tr>
@@ -208,7 +208,7 @@
 
 		<table class="table table-condensed table-bordered"><caption><%=t 'oe-title'%></caption>
 			<thead>
-				<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
+				<tr><th style="width: 80%;"><%=t 'question' %></th><th class="checker"><%=t 'response' %></th><th class="rating"><%=t 'rating' %></th></tr>
 			</thead>
 			<tbody>
 				<tr><td class="question"><%=t 'oe1'%></td><td class="checker"><input type="checkbox" id="oe1-check" /><label class="checker" for="oe1-check">Yes</label></td><td rowspan='8' class="rating" id="oe-rating">0</td></tr>
@@ -226,7 +226,7 @@
 
 	<div class="tab-pane fade in" id="scorecard">
 		<p class="centralise"><select id="targetselectah">
-			<option value="start" selected="selected">Default</option>
+			<option value="start" selected="selected"><%=t 'default' %></option>
 			<option value="independentsoftwarevendor"><%=t 'independentsoftwarevendor' %></option>
 			<option value="onlineserviceprovider"><%=t 'onlineserviceprovider' %></option>
 			<option value="financialservicesorganisation"><%=t 'financialservicesorganisation' %></option>
@@ -237,9 +237,9 @@
 </div>
 
 
-<h1><div id="about">About</div></h1>
+<h1><div id="about"><%=t 'aboutheader' %></div></h1>
 <p><%= raw t('abouttext') %></p>
-<p><a href="#topderp" class="scroll">Back to top</a></p>
+<p><a href="#topderp" class="scroll"><%=t 'backtotop' %></a></p>
 
 <p></p>
 
@@ -292,6 +292,19 @@
 		oetitle: '<%= raw t('oe-title') %>',
 		current: '<%= raw t('current') %>',
 		target: '<%= raw t('target') %>'
+	}
+
+	// Function to set the footer
+	var SetFooterContent = function(state) {
+	    if (state == null) {
+	        $('#bottomderp').html("<%= raw t('footernull') %>");
+	    } else if (state == "pleasedont") {
+	        $('#bottomderp').html("<%= raw t('footerdont') %>");
+	    } else if (state == "cookies") {
+	       $('#bottomderp').html("<%= raw t('footercookies') %>");
+	    } else if (state == "online") {
+	        $('#bottomderp').html("<%= raw t('footeronline') %>");
+	    }
 	}
 
 </script>
@@ -406,7 +419,7 @@ $(document).ready(function() {
 	$(window).bind('beforeunload', function() {
 		//Hey don't close the window while we haven't synced!
 		if (CompareSyncedAssessment() == true) {
-			return "We haven't saved online yet .. are you sure you want to quit?";
+			return "<%= raw t('saveconfirmation') %>";
 		}
 
 	});
