--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,6 +108,7 @@
 		</div>
 	</div>
 
+	<% if user_signed_in? %>
 	<div id="updatePasswordModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="uppwd" aria-hidden="true" data-remote="<%= edit_pwd_path %>">
 		<div class="modal-header">
 			<h3><%=t 'updatepassword' %></h3>
@@ -131,6 +132,19 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="editTargetModal" class="modal hide fade modal-target" tabindex="-1" role="dialog" aria-labelledby="wtfomgbbqz" aria-hidden="true" data-remote="<%= edit_target_path %>">
+		<div class="modal-header">
+			<h3><%=t 'edittarget' %></h3>
+		</div>
+		<div class="modal-body">
+			<h3><%=t 'loading' %></h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
+		</div>
+	</div>
+	<% end %>
 
 	<div id="messageModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="Herp" aria-hidden="true">
 		<div class="modal-header">
