Updated password fields to remove autocomplete

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
   <%= f.label :password, :class => "control-label" %>
   <div class="controls">
-  	<%= f.password_field :password %>
+  	<%= f.password_field :password, :autocomplete => "off" %>
   </div>
 </div>
 
@@ -21,7 +21,7 @@
 
   <%= f.label :password_confirmation, :class => "control-label" %>
   <div class="controls">
-  	<%= f.password_field :password_confirmation %>
+  	<%= f.password_field :password_confirmation, :autocomplete => "off" %>
   </div>
 </div>
 
